--- a/static/CSS/admin_upload_item.css
+++ b/static/CSS/admin_upload_item.css
@@ -27,7 +27,7 @@ span{
     margin-left: 0;
     box-sizing: content-box;
     padding:10px 18px;
-    transition: 0.5s ease;
+    transition: 0.3s ease;
 }
 
 .tag_list li:last-child{
@@ -126,4 +126,18 @@ textarea{
     background-color: #0085FF;
     margin-top: 60px;
     margin-bottom: 100px;
+}
+
+ul .selected{
+    background-color: #0085FF;
+    color: white;
+}
+
+/* .rep_img_container{
+    width:100%;
+    height:527px;
+} */
+
+.item_img:hover{
+    cursor: pointer;
 }
