--- a/templates/adminpage.html
+++ b/templates/adminpage.html
@@ -33,8 +33,8 @@
         <div id="component_navigator">
             <ul>
                 <img id="LOGO" onclick="location.href='/'" src="../static/img/icon/안뇽인덕.png"/>
-                <li><a style="font-weight: 700;" href="./main.html">추천상품</a></li>
-                <li><a style="font-weight: 700;" href="./main.html">신상품</a></li>
+                <li><a style="font-weight: 700;" href="./category_item?category=추천상품">추천상품</a></li>
+                <li><a style="font-weight: 700;" href=".//category_item?category=신상품">신상품</a></li>
                 <li><a href="./category_item?category=A">인형</a></li>
                 <li><a href="./category_item?category=B">돕바/과잠</a></li>
                 <li><a href="./category_item?category=C">포스터</a></li>
@@ -45,7 +45,7 @@
         </div>
 </nav>
 <body>
-    {%if session['user_id']!="admin"%}
+    {%if session['user_id']!="dmswldmsgp00"%}
     <p class="section_title weight_700">관리자 페이지</p>
     <p class="alert">관리자 전용 페이지입니다. 로그인 후 이용하세요.</p>
     <div class="btn_container2">
