--- a/templates/index.html
+++ b/templates/index.html
@@ -33,8 +33,8 @@
         <div id="component_navigator">
             <ul>
                 <img id="LOGO" onclick="location.href='/'" src="../static/img/icon/안뇽인덕.png"/>
-                <li><a style="font-weight: 700;" href="./main.html">추천상품</a></li>
-                <li><a style="font-weight: 700;" href="./main.html">신상품</a></li>
+                <li><a style="font-weight: 700;" href="./category_item?category=추천상품">추천상품</a></li>
+                <li><a style="font-weight: 700;" href=".//category_item?category=신상품">신상품</a></li>
                 <li><a href="./category_item?category=A">인형</a></li>
                 <li><a href="./category_item?category=B">돕바/과잠</a></li>
                 <li><a href="./category_item?category=C">포스터</a></li>
@@ -48,9 +48,9 @@
     <div id="comp_main">
         <div id="comp_banner">
             <div class="banner_img slide">
-                <img onclick="location.href='item_detail?id=A000011'" class="fade slide_item" src="../static/img/banner/banner_0.png">
-                <img onclick="location.href='item_detail?id=B000010'" class="fade slide_item" src="../static/img/banner/banner_1.png">
-                <img onclick="location.href='item_detail?id=A000014'" class="fade slide_item" src="../static/img/banner/banner_2.png">
+                <img onclick="location.href='item_detail?id=D000000'" class="fade slide_item" src="../static/img/banner/banner_0.png"/>
+                <img onclick="location.href='item_detail?id=E000000'" class="fade slide_item" src="../static/img/banner/banner_1.png"/>
+                <img onclick="location.href='item_detail?id=A000004'" class="fade slide_item" src="../static/img/banner/banner_2.png"/>
             </div>
         </div>
         <div class="best_section">
@@ -91,7 +91,7 @@
             <ul class="notice_list">
                 <li class="notice_header">
                     <P class="weight_700">공지사항</P>
-                    <a href="/notice"><p>더보기 ></p></a>
+                    <a href="/error"><p>더보기 ></p></a>
                 </li>
                 <li>
                     <p>우천으로 인한 로젠택배 배송 지연에 대한 안내</p>
