--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,12 +15,12 @@
     <script src="../static/js/signup.js"></script>
     <script src="../static/js/base.js"></script>
 </head>
-<nav src="./main.html">
+<nav>
     <div id="comp_header">
         <div id="component_top-list">
             <ul>
-                {% if session['id']=="dmswldmsgp00" %}
-                <li><a class="size_14"href="./wishlist">{{session['id']}}님 안녕하세요!</a></li>
+                {% if session['user_id']%}
+                <li><a class="size_14"href="./wishlist">{{session['user_id']}}님 안녕하세요!</a></li>
                 <li><a class="size_14"href="./logout">로그아웃</a></li>
                 {% else %}
                 <li><a class="size_14"href="./signin">로그인</a></li>
@@ -33,8 +33,8 @@
         <div id="component_navigator">
             <ul>
                 <img id="LOGO" onclick="location.href='/'" src="../static/img/icon/안뇽인덕.png"/>
-                <li><a style="font-weight: 700;" href="./main.html">추천상품</a></li>
-                <li><a style="font-weight: 700;" href="./main.html">신상품</a></li>
+                <li><a style="font-weight: 700;" href="./category_item?category=추천상품">추천상품</a></li>
+                <li><a style="font-weight: 700;" href=".//category_item?category=신상품">신상품</a></li>
                 <li><a href="./category_item?category=A">인형</a></li>
                 <li><a href="./category_item?category=B">돕바/과잠</a></li>
                 <li><a href="./category_item?category=C">포스터</a></li>
