--- a/static/CSS/stylesheet_main.css
+++ b/static/CSS/stylesheet_main.css
@@ -19,7 +19,7 @@
 .slide{
     position: relative;
     width:100vw;
-    height:350px;
+    /* height:350px; */
     margin-left:-150px;
     overflow: hidden;
 }
