--- a/templates/index.html
+++ b/templates/index.html
@@ -48,9 +48,9 @@
     <div id="comp_main">
         <div id="comp_banner">
             <div class="banner_img slide">
-                <img onclick="location.href='item_detail?id=D000000'" class="fade slide_item" src="../static/img/banner/banner_0.png"/>
-                <img onclick="location.href='item_detail?id=E000000'" class="fade slide_item" src="../static/img/banner/banner_1.png"/>
-                <img onclick="location.href='item_detail?id=A000004'" class="fade slide_item" src="../static/img/banner/banner_2.png"/>
+                <img onclick="location.href='item_detail?id=D000000'" class="fade active slide_item" src="../static/img/banner/banner_0.png"/>
+                <img onclick="location.href='item_detail?id=E000000'" class="fade hide slide_item" src="../static/img/banner/banner_1.png"/>
+                <img onclick="location.href='item_detail?id=A000004'" class="fade hide slide_item" src="../static/img/banner/banner_2.png"/>
             </div>
         </div>
         <div class="best_section">
@@ -90,8 +90,8 @@
         <div class="notice_section">
             <ul class="notice_list">
                 <li class="notice_header">
-                    <P class="weight_700">공지사항</P>
-                    <a href="/error"><p>더보기 ></p></a>
+                    <P class="weight_700">게시판</P>
+                    <a href="/board"><p>더보기 ></p></a>
                 </li>
                 <li>
                     <p>우천으로 인한 로젠택배 배송 지연에 대한 안내</p>
