--- a/templates/show_db.html
+++ b/templates/show_db.html
@@ -51,9 +51,11 @@
         <option value="User">유저 목록</option>
         <option value="Item">상품 목록</option>
         <option value="Option">상품 옵션 목록</option>
-        <option value="Post">게시글용 데이터베이스</option>
+        <option value="Post">상품 게시글</option>
         <option value="Order">주문 목록</option>
         <option value="Wishlist">장바구니 전체</option>
+        <option value="Board">유저 게시판</option>
+        <option value="Comment">유저 게시판 댓글</option>
     </select>
     <p class="section_title weight_700">{{item[0].__table__.name}} Database (총 {{item|length}}개)</p>
     <table class="show_db">
