--- a/templates/board.html
+++ b/templates/board.html
@@ -51,28 +51,15 @@
         <div onclick="location.href='/board'" class="btn_board">유저 게시판 ></div>
     </div>
     <div class="right_section">
-        <p class="section_title">유저 게시판</p>
+        <p class="weight_700 section_title">유저 게시판</p>
         <table class="table_body">
+            {% for item in items %}
             <tr>
-                <td>1</td>
-                <td>우천으로 인한 로젠택배 배송 지연에 대한 안내</td>
-                <td style="text-align: right;" class="color_B5B5B5">2023.08.08</td>
+                <td>{{loop.index}}</td>
+                <td><a href="/user_post?post_id={{item.id}}">{{item.title}}</a></td>
+                <td style="text-align: right;" class="color_B5B5B5">{{item.data}}</td>
             </tr>
-            <tr>
-                <td>1</td>
-                <td>우천으로 인한 로젠택배 배송 지연에 대한 안내</td>
-                <td style="text-align: right;" class="color_B5B5B5">2023.08.08</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>우천으로 인한 로젠택배 배송 지연에 대한 안내</td>
-                <td style="text-align: right;" class="color_B5B5B5">2023.08.08</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>우천으로 인한 로젠택배 배송 지연에 대한 안내</td>
-                <td style="text-align: right;" class="color_B5B5B5">2023.08.08</td>
-            </tr>
+            {% endfor %}
         </table>
         <div class="btn_container">
             <button onclick="location.href='/write_board'">글쓰기</button>
